fix(elasticsearch): v8 support